xee-xpath/tests/snapshots/xpath__namespace_uri_element.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc xmlns=\"http://example.com/\" xmlns:e=\"http://example.com/e\"><a/><b><e:c/></b></doc>\"#,\n    \"descendant::* / fn:namespace-uri()\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    String(
                        AnyURI,
                        "http://example.com/",
                    ),
                ),
                Atomic(
                    String(
                        AnyURI,
                        "http://example.com/",
                    ),
                ),
                Atomic(
                    String(
                        AnyURI,
                        "http://example.com/",
                    ),
                ),
                Atomic(
                    String(
                        AnyURI,
                        "http://example.com/e",
                    ),
                ),
            ],
        ),
    },
)
