xee-xpath/tests/snapshots/xpath__negative_round_integer.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"round(123, -2)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    100,
                ),
            ),
        ),
    },
)
