xee-xpath/tests/snapshots/xpath__negative_round_integer4.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"round(-151, -2)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    -200,
                ),
            ),
        ),
    },
)
