xee-xpath/tests/snapshots/xpath__nested.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 + (8 - 2)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    7,
                ),
            ),
        ),
    },
)
