xee-xpath/tests/snapshots/xpath__nested_for_loop.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"for $i in (10, 20, 30), $j in (1, 2) return $i + $j\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        11,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        12,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        21,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        22,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        31,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        32,
                    ),
                ),
            ],
        ),
    },
)
