xee-xpath/tests/snapshots/xpath__position_closure.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(3, 4) ! (let $p := fn:position#0 return $p())\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
            ],
        ),
    },
)
