xee-xpath/tests/snapshots/xpath__predicate_empty_sequence.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() [. ge 1]\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
