xee-xpath/tests/snapshots/xpath__predicate_index.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[2]\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    2,
                ),
            ),
        ),
    },
)
