xee-xpath/tests/snapshots/xpath__predicate_index_not_whole_number.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[2.5]\")"
---
Ok(
    Sequence {
        stack_value: Empty,
    },
)
