xee-xpath/tests/snapshots/xpath__predicate_multiple.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2, 3)[. ge 2][. ge 3]\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
