xee-xpath/tests/snapshots/xpath__range.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 to 5\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Long,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Long,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Long,
                        3,
                    ),
                ),
                Atomic(
                    Integer(
                        Long,
                        4,
                    ),
                ),
                Atomic(
                    Integer(
                        Long,
                        5,
                    ),
                ),
            ],
        ),
    },
)
